fix: add gap to list element

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -20,6 +20,7 @@ ul {
   list-style-type: none;
   display: flex;
   padding-inline-start: 0px;
+  gap: 8px;
 }
 
 a {
